--- a/helix-cli-server/package.json
+++ b/helix-cli-server/package.json
@@ -1,11 +1,17 @@
 {
   "name": "helix-c2",
   "version": "1.0.0",
-  "description": "",
   "main": "helix.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "is-admin": "^4.0.0",
+    "promise-mysql": "^5.2.0"
+  },
+  "keywords": [],
+  "description": ""
 }
